// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CustomRegisterField> > renders and matches snapshot <Checkbox> 1`] = `
<div>
  <div
    class="_checkbox_531f07"
  >
    <div
      class="_row_531f07"
    >
      <input
        id="check-box_1235_name"
        name="name"
        type="checkbox"
        value=""
      />
      <label
        for="check-box_1235_name"
      >
        label
      </label>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="country"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="datepicker"> 1`] = `
<div>
  <div
    class="_dateField_eb6974"
  >
    <label
      class="_label_eb6974"
      for="text-field_1235_name"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_container_eb6974"
    >
      <input
        class="_hiddenInput_eb6974"
        id="text-field_1235_name"
        name="name"
      />
      <input
        class="_input_eb6974"
        id="text-field_1235_name-date"
        maxlength="2"
        name="date"
        placeholder="dd"
        type="number"
        value=""
      />
       / 
      <input
        class="_input_eb6974"
        id="text-field_1235_name-month"
        maxlength="2"
        name="month"
        placeholder="mm"
        type="number"
        value=""
      />
       / 
      <input
        class="_input_eb6974"
        id="text-field_1235_name-year"
        maxlength="4"
        name="year"
        placeholder="yyyy"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="randomstring"> 1`] = `<div />`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="select"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Dropdown type="us_state"> 1`] = `
<div>
  <div
    class="_container_bb73c6 _fullWidth_bb73c6 _medium_bb73c6"
  >
    <label
      class="_label_bb73c6"
      for="1235"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_dropdown_bb73c6 _fullWidth_bb73c6"
    >
      <select
        aria-required="false"
        class="_select_bb73c6"
        id="1235"
        name="name"
      />
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <Radio> 1`] = `
<div>
  <div>
    <div
      class="_header_d50e6e"
    >
      label
      <span>
        optional
      </span>
    </div>
  </div>
</div>
`;

exports[`<CustomRegisterField> > renders and matches snapshot <TextField> 1`] = `
<div>
  <div
    class="_textField_e16c1b"
  >
    <label
      class="_label_e16c1b"
      for="text-field_1235_name"
    >
      label
      <span>
        optional
      </span>
    </label>
    <div
      class="_container_e16c1b"
    >
      <input
        class="_input_e16c1b"
        id="text-field_1235_name"
        name="name"
        type="text"
        value="value"
      />
    </div>
  </div>
</div>
`;
